fixed spacing

--- a/styles.css
+++ b/styles.css
@@ -75,22 +75,20 @@ body {
   display: grid;
   justify-content: center;
   align-content: center;
-  flex-grow: 1;
   grid-template-columns: repeat(7, 4em);
   grid-template-rows: repeat(1, 4em);
   gap: .25em;
-  margin-bottom: 1em;
+  margin: 1em 0;
 }
 
 .guess-grid {
   display: grid;
   justify-content: center;
   align-content: center;
-  flex-grow: 1;
   grid-template-columns: repeat(5, 4em);
   grid-template-rows: repeat(4, 4em);
   gap: .25em;
-  margin-bottom: 1em;
+  margin: 1em 0;
 }
 
 .tile {
